[tool.poetry]
name = "convert_videos"
version = "2.8.11"
description = "This tool allows bulk conversion of videos using ffmpeg"
authors = ["Justin Dray <justin@dray.be>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only"
]

[tool.poetry.scripts]
convert-videos = "convert_videos.cli:main"

[tool.poetry.dependencies]
python = "^3.8.1"
colorama = "^0.4.6"
ffmpy = "^0.3.0"
video-utils = "^2.2.4"
click = "^8.1.3"
prettytable = "^3.7.0"
stringcase = "^1.2.0"
iso639 = "^0.1.4"

[tool.poetry.dev-dependencies]
coverage = "^7.2.5"
mock = "^5.0.2"
flake8 = "^6.0"
pytest-cov = "^4.0"
pytest = "^7.3"
black = "^23.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
