[project]
name = "convert_videos"
version = "2.9.0"
description = "This tool allows bulk conversion of videos using ffmpeg"
authors = [{ name = "Justin Dray", email = "justin@dray.be" }]
requires-python = ">=3.12.0,<4"
readme = "README.md"
license = "MIT"

dependencies = [
    "colorama>=0.4.6,<0.5",
    "ffmpy>=0.3.0,<0.4",
    "video-utils>=2.2.4,<3",
    "click>=8.1.3,<9",
    "prettytable>=3.7.0,<4",
    "stringcase>=1.2.0,<2",
    "iso639>=0.1.4,<0.2",
]

[project.scripts]
convert-videos = "convert_videos.cli:main"

[dependency-groups]
dev = [
    "coverage>=7.2.5,<8",
    "mock>=5.0.2,<6",
    "pytest-cov~=4.0",
    "pytest~=7.3",
    "ruff>=0.12.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
